# nextmap

./: .gitignore  adder.json  adder.rtlil  adder.v  adder16.v  adder64_carry_ahead.v  blackbox.strata  blackbox.v  dfftest.v  dsp.firrtl  dsp.rtlil  dsp48e2_behavioral_usages.v  dsp48e2_structural_usages.v  dsp48e2_usages.v  dsp_new.rtlil  eggtest.py  egraph_extraction.lp  emap.sh  error.txt  ir.py  json.txt  main  main.cpp  main.py  mul_new.json  multiplier.v  out.json  out_design.json  out_design.v  out_greedy.json  out_ilp_count.json  out_rewrite.json  prim_gen.sh  squarediffmult.rtlil  systolic.ilp  test.py  tmp.txt  two_stage_multiplier.v  two_stage_multiplier_dsp.v  write_firrtl  (+1 more)
db/: db.py  schema.sql
emap/: CMakeLists.txt  __init__.py  __main__.py  db.py  schema.sql
emap/common/: builder.py
emap/cpp/: CMakeLists.txt
emap/cpp/include/: build_and_sanitize_db.h  group_wires.h  group_wires_v2.h  prune_cells.h  trie.h
emap/cpp/src/: emapcc.cpp  group_wires.cpp  group_wires_v2.cpp  prune_cells.cpp
emap/extracts/: __init__.py  greedy.py  ilp.py  utils.py
emap/include/emap/: serialization.h  utils.h
emap/include/emap/strata/: ir.h  serializable.h
emap/rewrites/: __init__.py  arith.py  basic.py  dsp.py  retiming.py
emap/src/: emap.cpp  utils.cpp
emap/src/emap/: serialization.cpp
emap/src/strata/: ir.cpp
prim_gen/: __init__.py  ir.py  lakeroad_driver.py
rulesets/template/: dsp.py
techlibs/xilinx-ultrascale-plus/dsp48e2/: dsp48e2.v  dsp48e2.yml
tests/designs/aes128/: README  aes128.json  aes128.stat
tests/designs/black-parrot/: README  bp_be_top.stat  bp_core_minimal.stat  bp_fe_top.stat
tests/designs/handcrafted/: README  complex_multiplier.v  dot_product.v  signed_mac.v  square_diff.v  unsigned_mac.v  wide_multiplier.v
tests/designs/json/: dynpreaddmultadd.json  mac.json  signed_cmult.json
tests/designs/systolic/: README  systolic.stat
tests/designs/ug/: mult_unsigned.v  simplified_squarediffmult.v
tests/designs/verilog/handcrafted/: mac.v  signed_cmult.v
tests/designs/verilog/ug/: convergentRoundingOdd.v  sfir_even_symetric_systolic_top.v
tests/designs/vortex/: README  vortex_32b_32core.v  vortex_32b_64core.stat  vortex_32b_64core.v
tests/json/: cmult.json  dynpreaddmultadd.json
tests/rulesets/xilinx-xcup/: dsp.json
tests/verilog/: dynpreaddmultadd.v  squarediffmult.v
